--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
           </nav>
 
           <div class="head col-lg-10 offset-lg-1">
-            <div>
-                <div class="technologyin">
+            <div class="row align-items-start">
+                <div class="technologyin col-12">
                     Technology In
                 </div>
-                <div class="animation">
+                <div class="animation col-12">
                     Animation
                 </div>
             </div>
@@ -72,13 +72,84 @@
             <div class="contexthead">
               History Of Animation
             </div>
-            <div>
-              Traditional animation or cel or hand-drawn animation was the technique of animation before computer animation was invented
-              It was the dominant form of animation in cinemas at the time. Now with the development of computers and other technology, animation has become easier and faster
-              Draw sequences of animation of transparent pieces of paper with water colors and then later put into photography to capture each frame of the film
-              This site would look at movies from the past that used hand-drawn animation and compare it to animations movies today using computer animation
+            <div class="justify-content-between">
+              <div class="context">
+                <p>Before the modern computer animation, the technique of animation was called traditional, cel or hand-drawn animation. It was the dominant form of animation that appeared in cinemas and movies up until the late 1900s and early 2000s. Traditional animation was much more complex and tedious. You would draw sequences of the animation on to transparent peices of paper using water colors. Then you would take photos of each frames to create the film. Though now with the development of computers and technology, animation has become easier to produce and faster to be mass produced.</p>
+                <p>Another development of animation was the transition from 2D animation to 3D animation. The difference between the two animation types were that in 2D animation, artists would draw every frame while in 3D animation, you would create a 3D model of each part of the scene to make the animation "pop out" more. Even though animation was harder to animation, it was more expressive in the emotions and textures it can show. Many additional 3D animation softwares have also been created to make 3D animation easier and more natural.</p>
+              </div>
+              <div class="image offset-sm-4 col">
+                THIS IS A BOX FOR AN IMAGE
+              </div>
             </div>
           </div>
+
+          <div class="row justify-content-evenly">
+            <div class="head col-5" id="3dbox">
+              <h3>3d Animation Softwares</h3>
+              Adobe animation (can also be 2d animation)
+              Main widespread animation software as you can do many different types of animation on it
+              You can do 2d animation just as paper or just general 3d animation using vectors and even characters for video games. You can control the animation very easily and do a variety of things. There are animation software that can do more specific things but adobe animation can do some of the work pretty well.
+              Blender
+              Many animation studios have specific software that they use for different types of properties such as water or hair
+              Splash is used for water animation – able to simulate water in a fictional world and it figures out how water moves in relation to real life. It was used in the movie Moana where the ocean was a character on its own and was helping in the water interacting with the characters
+              Tonic and quicksilver was used to animate hair. Tonic was used to group hair pieces together to be able to place the hair in the way they wanted to. Frozen was a movie that used this as Anna and Elsa used Tonic to correctly shape their braids.
+              Video for Disney and hair animation: https://www.youtube.com/watch?v=cvTchBdrqdw&t=76s
+              There are many tools that have been used in studios such as disney that have made animation easier to do but also add new and more dynamic effects such as hair
+              </ul>
+            </div>
+            <div class="col-5">
+              <div class="head">
+                <h3>2d animation</h3>
+                Adobe animate (explained above)
+                Toon boom harmony and Moho - both focus on 2d animation
+                Moho focuses on making animation more easy
+                Toon boom harmony focuses are more detailed 2d animation and making the characters appear better
+                Flip-a-clip (for beginners)
+                Easy to used Animation software on tablets
+                Frame by frames that has certain tools to make animation easy
+                Personally tinkered with myself
+              </div>
+              <div class="head">
+                <h3>Hardware used in Animation</h3>
+                Tablets and ipads
+                You may just used your finger or get an ipad specific stylus
+                Animation specific tablets (from companies like wacom)
+                Stylus
+                Pencil of animation
+                Computer Hardware (well enough to run high end animation)
+                RAM
+                Quad core Processors
+                High end Graphics Card
+                Storage
+                CPUs
+                GPUs
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container head">
+          <div class="row">
+            <h3>Future Possible Technological Inventions</h3>
+            <div>
+            AI animation
+            Just like AI art but instead of just one drawing, it might be multiple frames
+            You may need one animation to show as a reference for the animation to work
+            You can type what you want the animation to go and the AI animation will show a new animation using the characters and scene from your reference animation
+            </div>
+            <div>
+            Additional softwares that allows for more details and texture to those of real life
+            Software that makes animation so actors don’t need to act out entire thing
+            You would only need animators to do the animation
+            Super realistic
+            </div>
+            <div>
+            Auto voice syncing software
+            Sometimes animate what the voice actors are saying for the animated character
+            Instead, the software will allow you to skip the step and voice sync it for you
+            </div>
+          </div>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="script.js"></script>
