--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link href="style.css" rel="stylesheet" type="text/css" />
-        <style>
-            /* CSS */
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
 
-            .head {
-                background-color: lightgreen;
-            }
+        <style>
+
+            /* CSS */
         </style>
 
         <title>Title</title>
@@ -22,7 +23,7 @@
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">Technology In Animation</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -72,13 +73,15 @@
             <div class="contexthead">
               History Of Animation
             </div>
-            <div class="justify-content-between">
-              <div class="context">
-                <p>Before the modern computer animation, the technique of animation was called traditional, cel or hand-drawn animation. It was the dominant form of animation that appeared in cinemas and movies up until the late 1900s and early 2000s. Traditional animation was much more complex and tedious. You would draw sequences of the animation on to transparent peices of paper using water colors. Then you would take photos of each frames to create the film. Though now with the development of computers and technology, animation has become easier to produce and faster to be mass produced.</p>
-                <p>Another development of animation was the transition from 2D animation to 3D animation. The difference between the two animation types were that in 2D animation, artists would draw every frame while in 3D animation, you would create a 3D model of each part of the scene to make the animation "pop out" more. Even though animation was harder to animation, it was more expressive in the emotions and textures it can show. Many additional 3D animation softwares have also been created to make 3D animation easier and more natural.</p>
+            <div class="container context align-items-start">
+              <div class="row col">
+                Before the modern computer animation, the technique of animation was called traditional, cel or hand-drawn animation. It was the dominant form of animation that appeared in cinemas and movies up until the late 1900s and early 2000s. Traditional animation was much more complex and tedious. You would draw sequences of the animation on to transparent peices of paper using water colors. Then you would take photos of each frames to create the film. Though now with the development of computers and technology, animation has become easier to produce and faster to be mass produced.
               </div>
-              <div class="image offset-sm-4 col">
-                THIS IS A BOX FOR AN IMAGE
+              <div class="row col">
+                Another development of animation was the transition from 2D animation to 3D animation. The difference between the two animation types were that in 2D animation, artists would draw every frame while in 3D animation, you would create a 3D model of each part of the scene to make the animation "pop out" more. Even though animation was harder to animation, it was more expressive in the emotions and textures it can show. Many additional 3D animation softwares have also been created to make 3D animation easier and more natural.
+              </div>
+              <div class="row col">
+                <img src="cel-animation.png">
               </div>
             </div>
           </div>
