--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
           </div>
           <div class="head col-lg-10 offset-lg-1">
             <div class="row align-items-start">
-                <div class="technologyin col-12">
+                <div class="technologyin col-12 animate__animated animate__bounceIn">
                     Technology In
                 </div>
-                <div class="animation col-12">
+                <div class="animation col-12 animate__animated animate__bounceIn">
                     Animation
                 </div>
             </div>
@@ -124,8 +124,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 <li>Animation specific tablets (from companies like wacom)</li>
                 <li>Stylus</li>
                 <li>Pencil of animation</li>
-                <li>Computer Hardware (well enough to run high end animation) with:</li>
-                  RAM, Quad core Processors, High end Graphics Card, Storage, CPUs, and GPUs
+                <li>Computer Hardware (well enough to run high end animation) with:
+                  RAM, Quad core Processors, High end Graphics Card, Storage, CPUs, and GPUs</li>
                 </ol>
               </div>
             </div>
@@ -137,22 +137,29 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <div class="container box">
           <h3>Future Possible Technological Inventions</h3>
             <div class="row">
-              <div class="font box col invention">
-                AI animation
-                Just like AI art but instead of just one drawing, it might be multiple frames
-                You may need one animation to show as a reference for the animation to work
-                You can type what you want the animation to go and the AI animation will show a new animation using the characters and scene from your reference animation
+              <div class="font boxes col invention">
+                <h3>AI animation</h3>
+                <ul>
+                <li>Just like AI art but instead of just one drawing, it might be multiple frames</li>
+                <li>You may need one animation to show as a reference for the animation to work</li>
+                <li>You can type what you want the animation to go and the AI animation will show a new animation using the characters and scene from your reference animation</li>
+                </ul>
               </div>
-              <div class="font box col invention">
-                Additional softwares that allows for more details and texture to those of real life
-                Software that makes animation so actors don’t need to act out entire thing
-                You would only need animators to do the animation
-                Super realistic
+              <div class="font boxes col invention">
+                <ul>
+                <h3>Additional softwares</h3>
+                <p>that allows for more details and texture to those of real life</p>
+                <li>Software that makes animation so actors don’t need to act out entire thing</li>
+                <li>You would only need animators to do the animation</li>
+                <li>Super realistic</li>
+                </ul>
               </div>
-              <div class="font box col invention">
-                Auto voice syncing software
-                Sometimes animate what the voice actors are saying for the animated character
-                Instead, the software will allow you to skip the step and voice sync it for you
+              <div class="font boxes col invention">
+                <h3>Auto voice syncing software</h3>
+                <ul>
+                <li>Sometimes animate what the voice actors are saying for the animated character</li>
+                <li>Instead, the software will allow you to skip the step and voice sync it for you</li>
+                </ul>
               </div>
             </div>
         </div>
