--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 
           </div>
 
-          <div class="box col-lg-10 offset-lg-1">
-            <div class="contexthead">
+          <div class="box col-lg-8 offset-lg-2">
+            <div class="contexthead font">
               History Of Animation
             </div>
-            <div class="container context align-items-start row">
-              <div class="col-6">
+            <div class="container context row">
+              <div class="col-6 col">
                 Before the modern computer animation, the technique of animation was called traditional, cel or hand-drawn animation. It was the dominant form of animation that appeared in cinemas and movies up until the late 1900s and early 2000s. Traditional animation was much more complex and tedious. You would draw sequences of the animation on to transparent peices of paper using water colors. Then you would take photos of each frames to create the film. Though now with the development of computers and technology, animation has become easier to produce and faster to be mass produced.
               </div>
-              <div class="col-6">
+              <div class="col-5 col">
+                <img src="cel-animation.png" class="img-fluid">
+              </div>
+              <div class="col-6 col">
+                <img src="peter_pan_ref.jpg" class="img-fluid">
+              </div>
+              <div class="col-6 col">
                 Another development of animation was the transition from 2D animation to 3D animation. The difference between the two animation types were that in 2D animation, artists would draw every frame while in 3D animation, you would create a 3D model of each part of the scene to make the animation "pop out" more. Even though animation was harder to animation, it was more expressive in the emotions and textures it can show. Many additional 3D animation softwares have also been created to make 3D animation easier and more natural.
-              </div>
-              <div class="col celimg">
-                <img src="cel-animation.png" class="celimg">
-              </div>
-              <div class="col celimg">
-                <img src="peter_pan_ref.jpg">
               </div>
             </div>
           </div>
@@ -86,34 +86,34 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
           <div class="space" id="navparts"></div>
 
           <div class="row justify-content-evenly font">
-            <div class="box col-5">
+            <div class="box col-lg-5">
               <h3>3d Animation Softwares</h3>
               <ol>
-              <li>Adobe animation (can also be 2d animation)</li>
-              Adboe Animation is an animation software can be fore variety use. You can use it for 2d animation, 3d animation using vectors and even characters for video games. It is an overall good software but if you wanted to animate something specific, there are other softwares that can be used.
+              <li>Adobe animation (can also be used for 2d animation)</li>
+              <p class="fonttext">Adobe Animation is an animation software can be fore variety use. You can use it for 2d animation, 3d animation using vectors and even characters for video games. It is an overall good software but if you wanted to animate something specific, there are other softwares that can be used.</p>
               <li>Blender</li>
-              Blender is a free 3d animation software used for animated films, motion graphics, VR, etc.
+              <p class="fonttext">Blender is a free 3d animation software used for animated films, motion graphics, VR, etc.</p>
               <li>Splash</li>
-              Splash is used for water animation being to simulate water in a fictional world and it figures out how water moves in relation to real life. It was used in the movie Moana where the ocean was a character on its own and was helping in the water interacting with the characters.
+              <p class="fonttext">Splash is used for water animation being to simulate water in a fictional world and it figures out how water moves in relation to real life. It was used in the movie Moana where the ocean was a character on its own and was helping in the water interacting with the characters.</p>
               <li>Tonic and Quicksilver</li>
-              These softwares were used to animate hair. Tonic was used to group hair pieces together to be able to place the hair in the way they wanted to. Frozen was a movie that used this as Anna and Elsa used Tonic to correctly shape their braids.
+              <p class="fonttext">These softwares were used to animate hair. Tonic was used to group hair pieces together to be able to place the hair in the way they wanted to. Frozen was a movie that used this as Anna and Elsa used Tonic to correctly shape their braids.</p>
               <p>Video for Disney and hair animation: https://www.youtube.com/watch?v=cvTchBdrqdw&t=76s</p>
               <p>There are many tools that have been used in studios such as disney that have made animation easier to do but also add new and more dynamic effects such as hair.</p>
               </ol>
               <div class="celimg">
-                <img src="image_2023-04-30_224540931.png" class="celimg">
+                <img src="image_2023-04-30_224540931.png" class="celimg img-fluid">
               </div>
             </div>
-            <div class="col-5">
+            <div class="col-lg-5">
               <div class="box">
                 <h3>2D Animation</h3>
                 <ol>
                 <li>Toon boom harmony and Moho</li>
-                Toom Boom Harmony focuses are more detailed 2d animation and making the characters appear better while Moho is a paid program that focuses on making animation more easy.
+                <p class="fonttext">Toom Boom Harmony focuses are more detailed 2d animation and making the characters appear better while Moho is a paid program that focuses on making animation more easy.</p>
                 <li>Flip-a-clip (for beginners)</li>
-                Flip=a-Clip is a very easy to used Animation software on tablets such as ipads that animate frame by frame and certain tools to make animation easy; I have personally tinkered with myself
+                <p class="fonttext">Flip-a-Clip is a very easy to used Animation software on tablets such as ipads that animate frame by frame and certain tools to make animation easy; I have personally tinkered with myself</p>
                 </ol>
-                <img src="animate.png" class="celimg">
+                <img src="animate.png" class="celimg img-fluid">
               </div>
               <div class="space2"></div>
               <div class="box">
