--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <body>
         <!-- HTML -->
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid animate__animated animate__backInDown">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid animate__animated animate__backInDown font" style="color: lightblue;">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Technology In Animation</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 
           <div class="space" id="navhead">
           </div>
-          <div class="head col-lg-10 offset-lg-1">
+          <div class="head col-lg-10 offset-lg-1 text-center">
             <div class="row align-items-start">
                 <div class="technologyin col-12 animate__animated animate__bounceIn">
                     Technology In
@@ -64,21 +64,23 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
           </div>
 
           <div class="box col-lg-8 offset-lg-2">
-            <div class="contexthead font">
+            <div class="contexthead font col">
               History Of Animation
             </div>
             <div class="container context row">
-              <div class="col-6 col">
+              <div class="col-lg-12 col">
                 Before the modern computer animation, the technique of animation was called traditional, cel or hand-drawn animation. It was the dominant form of animation that appeared in cinemas and movies up until the late 1900s and early 2000s. Traditional animation was much more complex and tedious. You would draw sequences of the animation on to transparent peices of paper using water colors. Then you would take photos of each frames to create the film. Though now with the development of computers and technology, animation has become easier to produce and faster to be mass produced.
               </div>
-              <div class="col-5 col">
-                <img src="cel-animation.png" class="img-fluid">
+              <div >
+              <img src="cel-animation.png" class="img-fluid rounded">
               </div>
-              <div class="col-6 col">
-                <img src="peter_pan_ref.jpg" class="img-fluid">
-              </div>
-              <div class="col-6 col">
-                Another development of animation was the transition from 2D animation to 3D animation. The difference between the two animation types were that in 2D animation, artists would draw every frame while in 3D animation, you would create a 3D model of each part of the scene to make the animation "pop out" more. Even though animation was harder to animation, it was more expressive in the emotions and textures it can show. Many additional 3D animation softwares have also been created to make 3D animation easier and more natural.
+              <div class="col-lg-12 col">
+                <div>
+                  Another development of animation was the transition from 2D animation to 3D animation. The difference between the two animation types were that in 2D animation, artists would draw every frame while in 3D animation, you would create a 3D model of each part of the scene to make the animation "pop out" more. Even though animation was harder to animation, it was more expressive in the emotions and textures it can show. Many additional 3D animation softwares have also been created to make 3D animation easier and more natural.
+                </div>
+                <div class="text-center">
+                  <img src="peter_pan_ref.jpg" class="img-fluid rounded ">
+                </div>
               </div>
             </div>
           </div>
@@ -134,7 +136,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 
         <div class="space" id="navpartb"></div>
 
-        <div class="container box">
+        <div class="container-fluid otherback">
+        <div class=" container box">
           <h3>Future Possible Technological Inventions</h3>
             <div class="row">
               <div class="font boxes col invention">
@@ -162,6 +165,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 </ul>
               </div>
             </div>
+        </div>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
