--- a/index.html
+++ b/index.html
@@ -136,34 +136,57 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 
         <div class="space" id="navpartb"></div>
 
+
         <div class="container-fluid otherback">
         <div class=" container box">
           <h3>Future Possible Technological Inventions</h3>
-            <div class="row">
-              <div class="font boxes col invention">
-                <h3>AI animation</h3>
-                <ul>
-                <li>Just like AI art but instead of just one drawing, it might be multiple frames</li>
-                <li>You may need one animation to show as a reference for the animation to work</li>
-                <li>You can type what you want the animation to go and the AI animation will show a new animation using the characters and scene from your reference animation</li>
-                </ul>
+              <div class="row">
+                <div class="col-4">
+                <button class="btn btn-success" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">A.I. Animation</button>
+                </div>
+                <div class="col-4">
+                <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Additional Features and Softwares</button>
+                </div>
+                <div class="col-4">
+                <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">Auto Voice Syncing Software</button>
               </div>
-              <div class="font boxes col invention">
-                <ul>
-                <h3>Additional softwares</h3>
-                <p>that allows for more details and texture to those of real life</p>
-                <li>Software that makes animation so actors don’t need to act out entire thing</li>
-                <li>You would only need animators to do the animation</li>
-                <li>Super realistic</li>
-                </ul>
-              </div>
-              <div class="font boxes col invention">
-                <h3>Auto voice syncing software</h3>
-                <ul>
-                <li>Sometimes animate what the voice actors are saying for the animated character</li>
-                <li>Instead, the software will allow you to skip the step and voice sync it for you</li>
-                </ul>
-              </div>
+            </div>
+                <div class="row">
+                  <div class="col-lg-4">
+                    <div class="collapse multi-collapse" id="multiCollapseExample1">
+                      <div class="card card-body boxes font">
+                        <ul>
+                          <li>Just like AI art but instead of just one drawing, it might be multiple frames</li>
+                          <li>You may need one animation to show as a reference for the animation to work</li>
+                          <li>You can type what you want the animation to go and the AI animation will show a new animation using the characters and scene from your reference animation</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4">
+                    <div class="collapse multi-collapse" id="multiCollapseExample2">
+                      <div class="card card-body boxes font">
+                        <ul>
+                          <li>that allows for more details and texture to those of real life</li>
+                          <li>Software that makes animation so actors don’t need to act out entire thing</li>
+                          <li>You would only need animators to do the animation</li>
+                          <li>Super realistic</li>
+                          </ul>
+                      </div>
+                    </div>
+                  </div>
+
+                    <div class="col-lg-4">
+                      <div class="collapse multi-collapse" id="multiCollapseExample3">
+                        <div class="card card-body boxes font">
+                          <ul>
+                            <li>Sometimes animate what the voice actors are saying for the animated character</li>
+                            <li>Instead, the software will allow you to skip the step and voice sync it for you</li>
+                          </ul>
+                        </div>
+                      </div>
+                </div>
             </div>
         </div>
         </div>
